# ProgettoPCS2025

./: LICENSE  README.md  main.cpp
Progetto2025/: CMakeLists.txt  main.cpp  main_test.cpp
Progetto2025/Documenzazione_UML/: CamminoMinimo.txt  Duale.txt  Inizializzazione_vertici.txt  Input_solido_platonico.txt  PoligonalLibrary.txt  Proiezione_sfera.txt  Triangolazione_1_classe.txt  Triangolazione_2_classe.txt
Progetto2025/ExportParaview/: CMakeLists.txt
Progetto2025/PolygonalMesh/: Cell0Ds_icosaedro.csv  Cell0Ds_ottaedro.csv  Cell0Ds_tetraedro.csv  Cell1Ds_icosaedro.csv  Cell1Ds_ottaedro.csv  Cell1Ds_tetraedro.csv  Cell2Ds_icosaedro.csv  Cell2Ds_ottaedro.csv  Cell2Ds_tetraedro.csv
Progetto2025/src/: CMakeLists.txt  Polygon.hpp  Triangle.hpp  Utils.cpp  Utils.hpp
Progetto2025/src_test/: CMakeLists.txt  TestPolygon.hpp
